--- a/styles/work/work-styles.scss
+++ b/styles/work/work-styles.scss
@@ -38,10 +38,9 @@
                 height: 380px;
                 cursor: pointer;
 
-                &:hover {
-                    // opacity: 0.5;
-                    filter: brightness(50%);
-                }
+                // &:hover {
+                //     filter: brightness(50%);
+                // }
 
     
             }
