--- a/styles/work/work-styles.css
+++ b/styles/work/work-styles.css
@@ -26,9 +26,11 @@
   height: 380px;
   cursor: pointer;
 }
-#work .project .project-image:hover {
-  filter: brightness(50%);
-}
+
+//#work .project .project-image:hover {
+//  filter: brightness(50%);
+//}
+
 #work .project .project-name {
   position: absolute;
   top: 38%;
