--- a/styles/work/work-styles.scss
+++ b/styles/work/work-styles.scss
@@ -83,3 +83,22 @@
    
     
 }
+
+
+@media (max-width: 413px) {
+
+    #work {
+
+        .project {
+    
+            .project-image {
+                height: 300px !important;
+
+    
+            }
+
+        }
+    }
+
+    
+}
