--- a/styles/footer/footer-styles.scss
+++ b/styles/footer/footer-styles.scss
@@ -217,3 +217,30 @@ footer {
 
 
 
+@media (max-width: 414px) {
+
+    .footer-container {
+       
+
+        .dotted-line-image {
+        }
+        
+        h1 {
+            text-align: end;
+        }
+
+        p {
+            font-size: 14px;
+        }
+
+    }
+    
+    
+}
+
+
+
+
+
+
+
