--- a/styles/footer/footer-styles.css
+++ b/styles/footer/footer-styles.css
@@ -166,6 +166,11 @@ footer {
   color: black;
 }
 
+@media (max-width: 1303px) {
+  .footer-container h1 {
+    text-align: end;
+  }
+}
 @media (max-width: 745px) {
   .footer-container {
     display: flex !important;
@@ -176,5 +181,13 @@ footer {
   }
   .footer-container h1 {
     font-size: 40px !important;
+  }
+}
+@media (max-width: 414px) {
+  .footer-container h1 {
+    text-align: end;
+  }
+  .footer-container p {
+    font-size: 14px;
   }
 }/*# sourceMappingURL=footer-styles.css.map */
