--- a/styles/about/about.scss
+++ b/styles/about/about.scss
@@ -27,7 +27,6 @@
                 h2 {
                     color: black;
                     font-size: 49px;
-                    // font-family: 'Abril Fatface', cursive;
                     font-family: 'Permanent Marker', cursive;
                     margin-bottom: 40px;
         
@@ -564,7 +563,7 @@
 
 }
 
-@media (max-width: 414px) {
+@media (max-width: 492px) {
     #top-section {
       
         #description-container {
@@ -599,7 +598,7 @@
 }
 
 
-@media (max-width: 375px) {
+@media (max-width: 450px) {
 
     #top-section {
 
@@ -611,7 +610,7 @@
 
             #grid-item-1 {
 
-                width: 335px;
+                width: 335px !important;
             }
 
             #grid-item-2 {
@@ -637,6 +636,5 @@
     }
     
 }
-
 
 
