--- a/styles/about/about.css
+++ b/styles/about/about.css
@@ -97,6 +97,7 @@
   border-style: solid;
   border-top: 0px;
   border-left: 0px;
+  border-width: 1px;
   height: 150px;
   width: 370px;
   padding: 10px;
@@ -115,6 +116,7 @@
   border-style: solid;
   border-top: 0px;
   border-left: 0px;
+  border-width: 1px;
   height: 150px;
   width: 310px;
   padding: 10px;
@@ -134,6 +136,7 @@
   border-top: none;
   border-left: none;
   border-right: none;
+  border-width: 1px;
   height: 150px;
   width: 370px;
   padding: 10px;
@@ -153,6 +156,7 @@
   border-top: none;
   border-left: none;
   border-bottom: none;
+  border-width: 1px;
   height: 150px;
   width: 370px;
   padding: 10px;
@@ -172,6 +176,7 @@
   border-top: none;
   border-left: none;
   border-bottom: none;
+  border-width: 1px;
   height: 150px;
   width: 310px;
   padding: 10px;
