--- a/styles/about/about.scss
+++ b/styles/about/about.scss
@@ -373,7 +373,7 @@
         grid-template-columns: repeat(2, 340px) !important;
     
         #grid-item-2 {
-            border-right: 0px;
+            border-right: 0px !important;
             width: 370px !important;
             padding: 10px 10px 10px 40px !important;
 
