--- a/styles/about/about.css
+++ b/styles/about/about.css
@@ -97,7 +97,6 @@
   border-style: solid;
   border-top: 0px;
   border-left: 0px;
-  border-width: 1px;
   height: 150px;
   width: 370px;
   padding: 10px;
@@ -116,7 +115,6 @@
   border-style: solid;
   border-top: 0px;
   border-left: 0px;
-  border-width: 1px;
   height: 150px;
   width: 310px;
   padding: 10px;
@@ -136,7 +134,6 @@
   border-top: none;
   border-left: none;
   border-right: none;
-  border-width: 1px;
   height: 150px;
   width: 370px;
   padding: 10px;
@@ -156,7 +153,6 @@
   border-top: none;
   border-left: none;
   border-bottom: none;
-  border-width: 1px;
   height: 150px;
   width: 370px;
   padding: 10px;
@@ -176,7 +172,6 @@
   border-top: none;
   border-left: none;
   border-bottom: none;
-  border-width: 1px;
   height: 150px;
   width: 310px;
   padding: 10px;
@@ -268,7 +263,7 @@
     grid-template-columns: repeat(2, 340px) !important;
   }
   #grid-container #grid-item-2 {
-    border-right: 0px;
+    border-right: 0px !important;
     width: 370px !important;
     padding: 10px 10px 10px 40px !important;
   }
@@ -377,7 +372,7 @@
     width: 150px !important;
   }
   #top-section #description-container #description #description-headline #large-pink-line-split {
-    width: 280px !important;
+    width: 260px !important;
     visibility: visible !important;
   }
 }
