--- a/styles/about/about.scss
+++ b/styles/about/about.scss
@@ -145,6 +145,7 @@
             width: 370px;
             padding: 10px;
             position: relative;
+            border-width: 1px;
 
             .purple-line {
                 height: 15px;
@@ -589,6 +590,36 @@
     
                 }
 
+            }
+        
+        }
+
+        #grid-container {
+        
+            #grid-item-1 {
+               border-width: 1px;
+            }
+        
+            #grid-item-2 {
+                border-width: 1px;
+            }
+        
+            #grid-item-3 {
+                border-width: 1px;
+        
+            }
+        
+            #grid-item-4 {
+                border-width: 1px;
+            }
+        
+            #grid-item-5 {
+                border-width: 1px;
+        
+            }
+        
+            #grid-item-6 {
+                border-width: 1px;
             }
         
         }
