--- a/styles/work/work-styles.scss
+++ b/styles/work/work-styles.scss
@@ -24,6 +24,10 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+        flex-wrap: wrap;
+        row-gap: 80px;
+        column-gap: 40px;
+
 
     }
 
