--- a/styles/work/work-styles.css
+++ b/styles/work/work-styles.css
@@ -18,6 +18,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  flex-wrap: wrap;
+  row-gap: 80px;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
 }
 #work .project {
   position: relative;
